<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="#3CB371"
        android:layout_width="match_parent"
        android:layout_height="82dp">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/btn1_name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="229dp"
            android:layout_height="66dp"
            android:gravity="center"
            android:text="@string/service_name"
            android:textColor="#FFFFFF"
            android:textSize="30dp"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/list_name"
            android:textSize="30dp" />
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp">

        <Button
            android:id="@+id/btn"
            android:layout_width="256dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="75dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_shape"
            android:text="@string/btn_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/research_name"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/btn2"
            android:layout_width="259dp"
            android:layout_height="63dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_shape"
            android:text="@string/btn2_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp">

        <TextView
            android:id="@+id/textView5"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/call_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="103dp">

        <Button
            android:id="@+id/btn3"
            android:layout_width="266dp"
            android:layout_height="62dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_shape"
            android:text="@string/btn3_name" />

    </LinearLayout>

</LinearLayout>