<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#3CB371"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lin_0"
        android:layout_width="match_parent"
        android:layout_height="273dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="311dp"
            android:src="@mipmap/qq_music" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:gravity="center"
            android:text="@string/text1_name"
            android:textColor="#FFD700"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_1"
        android:layout_width="match_parent"
        android:layout_height="69dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="351dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:gravity="center_horizontal"
            android:text="@string/text_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="26dp"
            android:layout_marginBottom="64dp"
            android:src="@mipmap/music" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp">

        <Button
            android:id="@+id/button"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_shape"
            android:text="@string/button_name"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center"
            android:text="@string/text2_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>